--- a/static/clientes.html
+++ b/static/clientes.html
@@ -4,12 +4,43 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=devide-width, initial-scale=1.0">
-    <tittle>Clientes</tittle>
 </head>
 <body>
     <h1>---- Clientes ----</h1>
-    <h3>Mia Fernandez Tarrillo</h3>
-    <h3>Luana Fernandez Tarrillo</h3>
-    <h3>Gladys Tarrillo Salgado</h3>
+
+    <table class="table">
+        <thead>
+          <tr>
+            <th scope="col">#</th>
+            <th scope="col">Nombre</th>
+            <th scope="col">Apellido</th>
+            <th scope="col">Edad</th>
+            <th scope="col">DNI</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <th scope="row">1</th>
+            <td>Mia</td>
+            <td>Fernandez</td>
+            <td>18</td>
+            <td>14253678</td>
+          </tr>
+          <tr>
+            <th scope="row">2</th>
+            <td>Jacob</td>
+            <td>Thornton</td>
+            <td>25</td>
+            <td>14253678</td>
+          </tr>
+          <tr>
+            <th scope="row">3</th>
+            <td>Larry </td>
+            <td>Falcon</td>
+            <td>21</td>
+            <td>14253678</td>
+          </tr>
+        </tbody>
+      </table>
 </body>
 </html>
