--- a/static/productos.html
+++ b/static/productos.html
@@ -4,12 +4,41 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=devide-width, initial-scale=1.0">
-    <tittle>Productos</tittle>
 </head>
 <body>
     <h1>---- Productos ----</h1>
-    <h3>Televisor</h3>
-    <h3>Laptop</h3>
-    <h3>Tablet</h3>
+    <table class="table">
+        <thead>
+          <tr>
+            <th scope="col">#</th>
+            <th scope="col">Producto</th>
+            <th scope="col">Cantidad</th>
+            <th scope="col">Precio</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <th scope="row">1</th>
+            <td>Televisor</td>
+            <td>3</td>
+            <td>2500</td>
+
+          </tr>
+          <tr>
+            <th scope="row">2</th>
+            <td>Tablet</td>
+            <td>5</td>
+            <td>2000</td>
+
+          </tr>
+          <tr>
+            <th scope="row">3</th>
+            <td>Mouse</td>
+            <td>10</td>
+            <td>100</td>
+
+          </tr>
+        </tbody>
+      </table>
 </body>
 </html>
